--- a/src/Employee.css
+++ b/src/Employee.css
@@ -2,39 +2,52 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-end;
+  /* justify-content: flex-end; */
+  align-content: center;
   margin: 10px;
-  padding: 20px;
+  padding: 5px;
+  margin-bottom: 20px;
+
   width: 100%;
-  max-height: 400px;
+  max-height: 500px;
   min-width: 100px;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: white;
+  background-color: #f2f1f0;
   box-shadow: 0.5px 1px 1px 1px #4c4949;
-
   z-index: 1;
-  /* border-radius: 20px; */
+  border-radius: 20px;
+  font-style: italic;
 }
 
-.employee_info {
-  height: 100px;
-  margin-bottom: 15px;
+.employee__info {
+  /* height: 100px; */
+  align-items: center;
+  display: flex;
+  flex-direction: column;
   width: 100%;
+  padding: 2px;
+  padding-top: 20px;
 }
 
 .employee > img {
   max-height: 300px;
   width: 100%;
+
   object-fit: contain;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
+  box-shadow: 1px 2px 1px 1px #ada9a9;
+  border-radius: 50px;
 }
 
 .employee:hover {
-  transform: scale(1.01) !important;
+  transform: scale(1.03) !important;
   box-shadow: 3px 5px 3px 3px #4c4949;
   cursor: pointer;
 }
 
 .employee__name {
-  font-size: 25px;
+  font-size: 22px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-style: normal;
 }
